--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <!-- <link rel="stylesheet" href="./mian.css" /> -->
-    <script src="https://zh.js.cx/test/libs.js"></script>
+    <!-- <script src="https://zh.js.cx/test/libs.js"></script> -->
     <script src="./main.js"></script>
     <title>JavaScript高手之路全能课 基础篇</title>
   </head>
   <body>
-    <h1>再聊作用域</h1>
+    <h1>再聊作用域1111</h1>
   </body>
 </html>
